--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/node": "^20.10.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "socket.io-client": "^4.8.1",
     "supertest": "^6.3.3",
     "typescript": "^5.3.0",
     "wait-on": "^8.0.3"
